style.css
#gym-name{
   color: #EC4C66;
}

#header-image{
    background-image: url(
        https://images.unsplash.com/photo-1612090295951-656aaeac99d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80  
        );
        background-position: center top;
    height: 100vh;
    width: 100vw;
    background-repeat: no-repeat;
    background-size: cover;
}

#nav-bar{background-color: #ffffff;
    height: 70px;
    display: flex;
    width: 100%;
    position: fixed;
    z-index: 5;
    flex-direction: row;
    align-items: center;
    margin-top: -8px;
}

.navbar-element{
    font-size: 10;
    text-decoration: none;
    color: #345293;
    flex-grow: 1;   
}

.navbar-logo{
  flex-grow: 8  ;
  padding-left: 30px;
}

.header-button{

background-color: #EC4C66; /* Green */
  border: 2px solid;
  border-radius: 5px;
 border-style: none;
  color: rgb(255, 255, 255);
  padding: 10px 10px;
  margin: 20px;
  text-align: center;
  text-decoration: none;    
  font-size: 16px;
}


#subscribe-button{
background-color: #EC4C66; /* Green */
border-radius: 5px;
border-color: rgba(255, 255, 255, 0); 
color: rgb(0, 0, 0);
padding: 7px;
cursor: pointer;

}

#bmi-button{
    background-color: #EC4C66; 
border-radius: 5px;
border-color: rgba(255, 255, 255, 0); 
color: rgb(0, 0, 0);
padding: 7px;
cursor: pointer;
}

#bmi-button:hover{
    background-color: #ec4c67a1;

}

.bgr-descr-title {
margin: 5px;
}


.bgr-descr-subtitle {
margin: 10px;
}

.bgr-descr-desc{
    margin: 5px;
}

#bgr-image-dscr{
    display: flex; 
    flex-direction: column;
    align-items: center;  
    justify-content: center;  
    width: 100%;
    height: 100%;
}

.service-card{
    text-align: center;
    margin: 5px 30px 0px 30px;
    padding: 10px 20px 0px 20px;
    background-color: #ffffff;
    height: 270px;
    width: 250px;
    
   
    color: rgb(0, 0, 0);}
.service-card i {
    margin-top: 30px;
    font-size: 45px;
    color: #EC4C66;
}
.service-card h3{
    margin-top: 40px;
    margin-bottom: 30px;
    
}




.about-services-card-container{
    display: flex ;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center ;
}

.courses-card-container{
    display: flex ;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
}


.course-card{
    position: relative;
    border-radius: 10px;
   display: flex;
   margin: 10px;
   opacity: 1;
   align-items: center;
   justify-content: center;
   
background-color: rgb(207, 190, 190);
    height: 400px;
    width: 350px;
    cursor: pointer;
    color: rgb(255, 255, 255);
}


.hover-card-effect{
    position: absolute;
    height: 0;
    width: 100%;   
    bottom: 0;
    left: 0;
}

#info-container{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
}

.info{
   text-align: center;
}

#newsletter{
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;    
    justify-content: center;
    color: white;
    padding-bottom:15px; height: 130px;
  background-image: url(
    
  
  

   https://images.unsplash.com/photo-1623874400767-0fcdeedd0f5d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
  
  
  );
  background-repeat: no-repeat;
  background-size: cover;
  background-position:top;





}
#email-input{
    width: 50vw;
    min-width: 200px;
    max-width: 600px;    
}
.input{
    height: 25px;
}



.fa {
    margin-top: -7px;
    font-size: 30px;
    color: #EC4C66;
    cursor: pointer;

}

.fa:hover {
    opacity: 0.7;
}



#btn-up {
    background-color: rgb(20, 122, 224);
    border: none;
    z-index: 2;
    color: white;
    position: fixed;
    bottom: 3%;
    right: 1%;
    border-radius: 8px;
    padding: 12px 16px;
    font-size: 20px;
    cursor: pointer;

 
}








#bmi-card{
    height: 100%;
    width: 50%;
    min-width: 200px;
    max-width: 300px;
    color: rgb(214, 214, 214);
    padding-left: 4%;
}   

#bmi-section{
    margin-top: 30px;
    padding: 30px;
    height: fit-content;
    width: 100%;
    background-image: url(
        
    https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
    
    
    
    
    
    
    
    );
    background-position:center ;
    background-size: cover;
    background-repeat: no-repeat;
  
}   

